--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,22 @@
+categories:
+  - travel
+  - food
+  - adventures
+
+gems:
+  - jekyll-archives
+
+jekyll-archives:
+  enabled: all
+  layout: 'archive'
+  permalinks:
+    year: '/:year/'
+    month: '/:year/:month/'
+    day: '/:year/:month/:day/'
+    tag: '/tag/:name/'
+    category: '/category/:name/'
+
+
 collections:
   quotes:
     output: false
